--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
                 Copyright © 2020 Michael Ciriacy - All Rights Reserved | <a href="https://michaelciriacy.github.io/privacy-policy.html">Privacy Policy</a></p>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to make your own website - <a href="https://mobirise.site/x" style="color:#aaa;">Find more</a></p></section>
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> site was created with Mobirise</p></section>
   
   
 </body>
